   
2000-10-24	Joel Sherrill <joel@OARcorp.com>

	* libc/ioman.c: Moved to libfs.
	* libc/Makefile.am: Removed ioman.c as part of moving it to libfs.
	* libc/base_fs.c: Removed include of imfs.h and reworded comment
	to avoid being IMFS specific.
	* libc/libio.h: Removed prototype of IMFS_ops since it should 
	not be in this file.
	* libc/mount.c: Removed IMFS specific configuration information.
	* libc/unmount.c: Removed include of imfs.h and reworded comment
	to avoid being IMFS specific.

2000-10-18	Chris Johns <ccj@acm.org>

	* libfs created.
	* libc/deviceio.c, libc/imfs_getchild.c, libc/imfs_readlink.c,
	libc/imfs.h, libc/imfs_gtkn.c, libc/imfs_rmnod.c, libc/imfs_chown.c,
	libc/imfs_handlers_device.c, libc/imfs_stat.c, libc/imfs_creat.c,
	libc/imfs_handlers_directory.c, libc/imfs_symlink.c, libc/imfs_debug.c,
	libc/imfs_handlers_link.c, libc/imfs_unixstub.c, libc/imfs_directory.c,
	libc/imfs_handlers_memfile.c, libc/imfs_unlink.c, libc/imfs_eval.c,
	libc/imfs_init.c, libc/imfs_unmount.c, libc/imfs_fchmod.c,
	libc/imfs_initsupp.c, libc/imfs_utime.c, libc/imfs_fcntl.c,
	libc/imfs_link.c, libc/memfile.c, libc/imfs_fdatasync.c,
	libc/imfs_mknod.c, libc/miniimfs_init.c, libc/imfs_free.c,
	libc/imfs_mount.c, libc/imfs_fsunmount.c, libc/imfs_ntype.c:
	Moved to libfs/src/imfs.
	* Makefile.am: Modified to reflect above.

2000-10-18	Joel Sherrill <joel@OARcorp.com>

	* libc/Makefile.am: Added mallocfreespace.c.
	* libc/mallocfreespace.c: New file based on work by Nick Simon
	<Nick.SIMON@syntegra.bt.co.uk> which he included in malloc.c.
	* libc/libcsupport.h: Added prototype for malloc_free_space().

2000-10-18	Joel Sherrill <joel@OARcorp.com>

	* libc/fcntl.c: Do not require every filesystem to have an fcntl()
	handler.  Most fcntl() operations can be performed with no
	filesystem support.
	* ChangeLog: Corrected comment.

2000-09-28	Joel Sherrill <joel@OARcorp.com>

	* libc/libio.h (rtems_filesystem_file_handlers_r,