@@ -1,3 +1,9 @@
+
+2000-10-26      Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* configure.in: Remove bogus cfg_subdirs.
+	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
+	Switch to GNU canonicalization.
    
 2000-10-24	Joel Sherrill <joel@OARcorp.com>
 
